# SamplePoetry

./: README.md  poetryinit.sh  pyproject.toml  venv.sh
tests/: test_samplepoetry.py
